--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@
   background-image: -webkit-gradient(linear, left top, left bottom, from(#311847), to(#3EB9E6));
   background-image: -webkit-linear-gradient(top, #311847, #3EB9E6);
   background-image: -moz-linear-gradient(top, #311847, #3EB9E6);
+  background-image: linear-gradient(to bottom, #311847, #3EB9E6);
 }
 
 .App-header {
