--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+#root {
+  padding: 0;
+  margin: 0;  
+  height: 100vh;
+  width: 100vw;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -22,7 +29,7 @@
 }
 
 .weather-card {
-  min-height: 30vh;
+  min-height: 25vh;
   width: 35wh;
   /* display: flex;
   flex-direction: column; */
