--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@ body {
 }
 
 .weather-box {
-  min-height: 30vh;
-  min-width: 50wh;
+  /* min-height: 30vh;
+  min-width: 50wh; */
   /* display: flex;
   flex-direction: column; */
   align-items: center;
@@ -26,12 +26,12 @@ body {
 }
 
 .weather-card {
-  min-height: 28vh;
-  width: 35wh;
-  /* display: flex;
-  flex-direction: column; */
-  /* align-items: center;
-  justify-content: center;  */
+  min-height: 60vh;
+  width: 75vw;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center; 
   position: relative;
   font-family: 'Abel', sans-serif;  
   padding: 30px;
