--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ body {
   width: 75vw;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
   justify-content: center; 
   position: relative;
   font-family: 'Abel', sans-serif;  
