--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   width: 100vw;
 }
 
-.weather-box {
+.weather-container {
   /* min-height: 30vh;
   min-width: 50wh; */
   /* display: flex;
@@ -25,15 +25,26 @@ body {
   animation-duration: 1s; 
 }
 
-.weather-card {
+.weather-box {
   min-height: 60vh;
   width: 75vw;
+  display: flex;
+  /* flex-direction: column; */
+  /* align-items: center;
+  justify-content: center;  */
+  position: relative;
+  font-family: 'Abel', sans-serif;
+}
+
+.weather-card {
+  /* min-height: 60vh;
+  width: 75vw; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center; 
   position: relative;
-  font-family: 'Abel', sans-serif;  
+  /* font-family: 'Abel', sans-serif;   */
   /* animation-name: introduction;
   animation-duration: 2s;  */
 }
