--- a/src/App.css
+++ b/src/App.css
@@ -69,23 +69,31 @@ body {
   grid-row-gap: 20px;
   /* border: 2px solid #850007; */
   /* align-items: center; */
-  align-content: center;
+  /* align-content: center; */
   justify-content: center;
+  justify-items: center;
 }
 
 .weather-search {
   display: grid;
+  grid-template-rows: auto;
+  /* grid-row-gap: 5px; */
   /* border: 2px solid #4194c4; */
   /* margin: 5px; */
-  align-content: center;
+  max-width: 200px;
+  /* align-content: center;
+  align-items: center; */
   justify-content: center;
+  justify-items: center;
+  min-height: 100px;
 }
 
 .weather-detail {
   display: grid;
-  grid-template-columns: 40px 140px 40px;
+  grid-template-columns: 40px 120px 40px;
   grid-column-gap: 20px;
   grid-template-rows: auto;
+  max-width: 200px;
   /* border: 2px solid #f7a800; */
   justify-content: center;
   justify-items: center;
